pre-runData